--- a/KFrontend/Frontend/angular.json
+++ b/KFrontend/Frontend/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ],
             "scripts": []
