--- a/KFrontend/Frontend/package.json
+++ b/KFrontend/Frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@microsoft/signalr": "^8.0.0",
     "chart.js": "^4.4.3",
     "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
