--- a/Kliens-RAPC9Y-Backend/Kliens-RAPC9Y-Backend/Kliens-RAPC9Y-Backend.csproj
+++ b/Kliens-RAPC9Y-Backend/Kliens-RAPC9Y-Backend/Kliens-RAPC9Y-Backend.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	  <PackageReference Include="NewtonSoft.Json" Version="13.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameWorkCore" Version="6.0.9" />
